k8s/from_server/react-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "12"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"9"},"creationTimestamp":"2026-05-25T16:11:54Z","generation":9,"labels":{"app":"react-backend-app"},"name":"react-backend-app","namespace":"dev-1","resourceVersion":"345573","uid":"36d8ece8-6bd5-40b5-a737-f527f23e81a5"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"react-backend-app"}},"strategy":{"rollingUpdate":{"maxSu [...]
  creationTimestamp: "2026-05-25T16:11:54Z"
  generation: 12
  labels:
    app: react-backend-app
  name: react-backend-app
  namespace: dev-1
  resourceVersion: "346240"
  uid: 36d8ece8-6bd5-40b5-a737-f527f23e81a5
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: react-backend-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: react-backend-app
    spec:
      containers:
      - image: docker.io/barsukforever5/react-backend-image:v13
        imagePullPolicy: IfNotPresent
        name: react-backend-container
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-05-25T16:11:56Z"
    lastUpdateTime: "2026-05-25T16:11:56Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-05-25T16:11:54Z"
    lastUpdateTime: "2026-06-06T11:22:21Z"
    message: ReplicaSet "react-backend-app-79498b95c" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 12
  readyReplicas: 1
  replicas: 1
  terminatingReplicas: 0
  updatedReplicas: 1
