k8s/from_server/react-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-backend-service
spec:
  type: ClusterIP
  selector:
    app: react-backend-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
