k8s/from_server/react-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
  namespace: dev-1
spec:
  type: ClusterIP
  selector:
    app: react-frontend-app
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
